# tg-br-video

./: pyproject.toml
src/: main.py
src/brvideo/: app.py
src/brvideo/bot/: types.py
src/brvideo/bot/handlers/: __init__.py  start.py
src/brvideo/bot/middlewares/: __init__.py
src/brvideo/bot/services/: bot.py
src/brvideo/core/: config.py  enums.py  logging.py  models.py
src/brvideo/core/managers/: __init__.py  admins.py
src/brvideo/core/managers/base/: __init__.py  cache.py  cached_model.py  manager.py
tests/: conftest.py  test_admins_integration.py  test_admins_manager.py
