[project]
name = "tg-br-video"
version = "0.1.0"
description = "Telegram bot for BR video examination"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aerich>=0.9.2",
    "aiogram>=3.22.0",
    "asyncpg>=0.30.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.1",
    "tortoise-orm>=0.25.1",
]

[tool.aerich]
tortoise_orm = "src.brvideo.core.config.database_config"
location = "./migrations"
src_folder = "./src"
